Aggiunta pagina admin lato android che gestisce le richieste dei viaggiatori di diventare organizzatori. Risolti alcuni bug e permesso l'allego da file (sia lato android che lato web) e aggiunta paginazione per le richieste.